@@ -1611,14 +1611,8 @@ else
         ;;
 
       # Linux/mipseb and Linux/mipsel with o32 ABI
-      linux*--mips) # TODO
-        XCFLAGS="$XCFLAGS -DNO_ASM -DNO_ARI_ASM -DNO_SP_ASM"
-        XCFLAGS="$XCFLAGS -DNO_FAST_DISPATCH"
-        XCFLAGS="$XCFLAGS -DNO_FAST_FLOAT -DNO_FAST_DOUBLE"
-        XCFLAGS="$XCFLAGS -DNO_ALLOCA"
-        XCFLAGS="$XCFLAGS -DNO_ADDRESS_SPACE_ASSUMPTIONS"
-        XCFLAGS="$XCFLAGS -DNO_GENERATIONAL_GC"
-        XCFLAGS="$XCFLAGS -DNO_SYMBOLFLAGS"
+      linux*--mips)
+        XCFLAGS="$XCFLAGS -DNO_ASM"
         ;;
 
       # Linux/mips64eb and Linux/mips64el with n32 ABI
