@@ -1,5 +1,14 @@
 2018-01-14  Bruno Haible  <bruno@clisp.org>
 
+	Enable most optimizations on Linux/mips.
+	* Makefile.devel (multibuild-linux-mips-32): Renamed from
+	multibuild-linux-mipseb-32 and multibuild-linux-mipsel-32. Enable all
+	build variants that work.
+	* makemake.in (XCFLAGS): For Linux/mips with o32 ABI, enable all
+	optimizations except ASM.
+
+2018-01-14  Bruno Haible  <bruno@clisp.org>
+
 	Fix failure of the spvw_pure_blocks build on Linux/mipsn32.
 	* lispbibl.d (MAPPABLE_ADDRESS_RANGE_START): Treat Linux/mipsn32 like
 	Linux/mips32.
